fix: style button payment on mobile

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1094,8 +1094,10 @@ footer {
 
 .position-sticky-mobile {
 	@media screen and (max-width: 768px) {
+		margin: 0 -1.2rem;
 		position: sticky;
 		bottom: 0;
+		border-radius: 0 !important;
 	}
 }
 
